src/_static.mojo


# @always_inline
# fn mesh_pattern_get_patch_count(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], count: UnsafePointer[c_uint, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_mesh_pattern_get_patch_count", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[c_uint, MutExternalOrigin]](pattern, count))

# @always_inline
# fn mesh_pattern_get_path(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], patch_num: c_uint) -> UnsafePointer[__CairoPathT, MutExternalOrigin]:
#     return external_call["cairo_mesh_pattern_get_path", UnsafePointer[__CairoPathT, MutExternalOrigin], UnsafePointer[__CairoPatternT, MutExternalOrigin], c_uint](pattern, patch_num)

# @always_inline
# fn mesh_pattern_get_corner_color_rgba(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], patch_num: c_uint, corner_num: c_uint, red: UnsafePointer[c_double, MutExternalOrigin], green: UnsafePointer[c_double, MutExternalOrigin], blue: UnsafePointer[c_double, MutExternalOrigin], alpha: UnsafePointer[c_double, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_mesh_pattern_get_corner_color_rgba", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_uint, c_uint, UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](pattern, patch_num, corner_num, red, green, blue, alpha))

# @always_inline
# fn mesh_pattern_get_control_point(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], patch_num: c_uint, point_num: c_uint, x: UnsafePointer[c_double, MutExternalOrigin], y: UnsafePointer[c_double, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_mesh_pattern_get_control_point", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_uint, c_uint, UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](pattern, patch_num, point_num, x, y))

# @always_inline
# fn matrix_init(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin], xx: c_double, yx: c_double, xy: c_double, yy: c_double, x0: c_double, y0: c_double) -> NoneType:
#     return external_call["cairo_matrix_init", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin], c_double, c_double, c_double, c_double, c_double, c_double](matrix, xx, yx, xy, yy, x0, y0)

# @always_inline
# fn matrix_init_identity(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_matrix_init_identity", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin]](matrix)

# @always_inline
# fn matrix_init_translate(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin], tx: c_double, ty: c_double) -> NoneType:
#     return external_call["cairo_matrix_init_translate", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin], c_double, c_double](matrix, tx, ty)

# @always_inline
# fn matrix_init_scale(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin], sx: c_double, sy: c_double) -> NoneType:
#     return external_call["cairo_matrix_init_scale", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin], c_double, c_double](matrix, sx, sy)

# @always_inline
# fn matrix_init_rotate(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin], radians: c_double) -> NoneType:
#     return external_call["cairo_matrix_init_rotate", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin], c_double](matrix, radians)

# @always_inline
# fn matrix_translate(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin], tx: c_double, ty: c_double) -> NoneType:
#     return external_call["cairo_matrix_translate", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin], c_double, c_double](matrix, tx, ty)

# @always_inline
# fn matrix_scale(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin], sx: c_double, sy: c_double) -> NoneType:
#     return external_call["cairo_matrix_scale", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin], c_double, c_double](matrix, sx, sy)

# @always_inline
# fn matrix_rotate(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin], radians: c_double) -> NoneType:
#     return external_call["cairo_matrix_rotate", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin], c_double](matrix, radians)

# @always_inline
# fn matrix_invert(matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_matrix_invert", c_int, UnsafePointer[__CairoMatrixT, MutExternalOrigin]](matrix))

# @always_inline
# fn matrix_multiply(result: UnsafePointer[__CairoMatrixT, MutExternalOrigin], a: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], b: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_matrix_multiply", NoneType, UnsafePointer[__CairoMatrixT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]](result, a, b)

# @always_inline
# fn matrix_transform_distance(matrix: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], dx: UnsafePointer[c_double, MutExternalOrigin], dy: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_matrix_transform_distance", NoneType, UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](matrix, dx, dy)

# @always_inline
# fn matrix_transform_point(matrix: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], x: UnsafePointer[c_double, MutExternalOrigin], y: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_matrix_transform_point", NoneType, UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](matrix, x, y)

# @always_inline
# fn region_create() -> UnsafePointer[__CairoRegionT, MutExternalOrigin]:
#     return external_call["cairo_region_create", UnsafePointer[__CairoRegionT, MutExternalOrigin]]()

# @always_inline
# fn region_create_rectangle(rectangle: UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin]) -> UnsafePointer[__CairoRegionT, MutExternalOrigin]:
#     return external_call["cairo_region_create_rectangle", UnsafePointer[__CairoRegionT, MutExternalOrigin], UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin]](rectangle)

# @always_inline
# fn region_create_rectangles(rects: UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin], count: c_int) -> UnsafePointer[__CairoRegionT, MutExternalOrigin]:
#     return external_call["cairo_region_create_rectangles", UnsafePointer[__CairoRegionT, MutExternalOrigin], UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin], c_int](rects, count)

# @always_inline
# fn region_copy(original: UnsafePointer[__CairoRegionT, ImmutExternalOrigin]) -> UnsafePointer[__CairoRegionT, MutExternalOrigin]:
#     return external_call["cairo_region_copy", UnsafePointer[__CairoRegionT, MutExternalOrigin], UnsafePointer[__CairoRegionT, ImmutExternalOrigin]](original)

# @always_inline
# fn region_reference(region: UnsafePointer[__CairoRegionT, MutExternalOrigin]) -> UnsafePointer[__CairoRegionT, MutExternalOrigin]:
#     return external_call["cairo_region_reference", UnsafePointer[__CairoRegionT, MutExternalOrigin], UnsafePointer[__CairoRegionT, MutExternalOrigin]](region)

# @always_inline
# fn region_destroy(region: UnsafePointer[__CairoRegionT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_region_destroy", NoneType, UnsafePointer[__CairoRegionT, MutExternalOrigin]](region)

# @always_inline
# fn region_equal(a: UnsafePointer[__CairoRegionT, ImmutExternalOrigin], b: UnsafePointer[__CairoRegionT, ImmutExternalOrigin]) -> cairo_bool_t:
#     return external_call["cairo_region_equal", cairo_bool_t, UnsafePointer[__CairoRegionT, ImmutExternalOrigin], UnsafePointer[__CairoRegionT, ImmutExternalOrigin]](a, b)

# @always_inline
# fn region_status(region: UnsafePointer[__CairoRegionT, ImmutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_region_status", c_int, UnsafePointer[__CairoRegionT, ImmutExternalOrigin]](region))

# @always_inline
# fn region_get_extents(region: UnsafePointer[__CairoRegionT, ImmutExternalOrigin], extents: UnsafePointer[__CairoRectangleIntT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_region_get_extents", NoneType, UnsafePointer[__CairoRegionT, ImmutExternalOrigin], UnsafePointer[__CairoRectangleIntT, MutExternalOrigin]](region, extents)

# @always_inline
# fn region_num_rectangles(region: UnsafePointer[__CairoRegionT, ImmutExternalOrigin]) -> c_int:
#     return external_call["cairo_region_num_rectangles", c_int, UnsafePointer[__CairoRegionT, ImmutExternalOrigin]](region)

# @always_inline
# fn region_get_rectangle(region: UnsafePointer[__CairoRegionT, ImmutExternalOrigin], nth: c_int, rectangle: UnsafePointer[__CairoRectangleIntT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_region_get_rectangle", NoneType, UnsafePointer[__CairoRegionT, ImmutExternalOrigin], c_int, UnsafePointer[__CairoRectangleIntT, MutExternalOrigin]](region, nth, rectangle)

# @always_inline
# fn region_is_empty(region: UnsafePointer[__CairoRegionT, ImmutExternalOrigin]) -> cairo_bool_t:
#     return external_call["cairo_region_is_empty", cairo_bool_t, UnsafePointer[__CairoRegionT, ImmutExternalOrigin]](region)

# @always_inline
# fn region_contains_rectangle(region: UnsafePointer[__CairoRegionT, ImmutExternalOrigin], rectangle: UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin]) -> c_int:
#     return external_call["cairo_region_contains_rectangle", c_int, UnsafePointer[__CairoRegionT, ImmutExternalOrigin], UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin]](region, rectangle)

# @always_inline
# fn region_contains_point(region: UnsafePointer[__CairoRegionT, ImmutExternalOrigin], x: c_int, y: c_int) -> cairo_bool_t:
#     return external_call["cairo_region_contains_point", cairo_bool_t, UnsafePointer[__CairoRegionT, ImmutExternalOrigin], c_int, c_int](region, x, y)

# @always_inline
# fn region_translate(region: UnsafePointer[__CairoRegionT, MutExternalOrigin], dx: c_int, dy: c_int) -> NoneType:
#     return external_call["cairo_region_translate", NoneType, UnsafePointer[__CairoRegionT, MutExternalOrigin], c_int, c_int](region, dx, dy)

# @always_inline
# fn region_subtract(dst: UnsafePointer[__CairoRegionT, MutExternalOrigin], other: UnsafePointer[__CairoRegionT, ImmutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_region_subtract", c_int, UnsafePointer[__CairoRegionT, MutExternalOrigin], UnsafePointer[__CairoRegionT, ImmutExternalOrigin]](dst, other))

# @always_inline
# fn region_subtract_rectangle(dst: UnsafePointer[__CairoRegionT, MutExternalOrigin], rectangle: UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_region_subtract_rectangle", c_int, UnsafePointer[__CairoRegionT, MutExternalOrigin], UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin]](dst, rectangle))

# @always_inline
# fn region_intersect(dst: UnsafePointer[__CairoRegionT, MutExternalOrigin], other: UnsafePointer[__CairoRegionT, ImmutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_region_intersect", c_int, UnsafePointer[__CairoRegionT, MutExternalOrigin], UnsafePointer[__CairoRegionT, ImmutExternalOrigin]](dst, other))
